--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -123,7 +123,7 @@ background: linear-gradient(to right, #009f9f 0, #346074 100%) repeat scroll 0 0
 color: #fff;
 }
 #sub a.dark { 
-	color: #e2e2e2;
+	color: #9d9d9d;
 }
 #sub a:hover.dark{
 	
