--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -1,5 +1,6 @@
 .panel-default > .panel-heading {
-background: linear-gradient(to right, #cf246a 0, #ff942e 100%) repeat scroll 0 0 transparent;
+/*background: linear-gradient(to right, #cf246a 0, #ff942e 100%) repeat scroll 0 0 transparent; */
+background-color: #323a45;
 border-left: #cf246a;
 border-right: #ff942e;
 color: #fff;
