--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -27,7 +27,19 @@ font-size: 10px;
 margin:0px; padding:0px;
 }
 
+#big {
+    overflow: hidden !important;
+    white-space:nowrap !important;
+    text-overflow:ellipsis !important;
+	width: 90%;
+	display:inline-block !important;
+	font-size: 12px !important;
+	margin-bottom: 1px;
+}
 
+#big:first-letter {
+	text-transform:uppercase;
+}
 
 #sub > p {
 	
@@ -65,7 +77,7 @@ margin:0px; padding:0px;
 }
 
 .cat-icon {
-    /*margin-top: 4px;*/
+    margin-top: 4px;
     text-align: center;
     width: 20px;
     color: #555;
@@ -102,62 +114,6 @@ margin:0px; padding:0px;
 .popular-tags > span {
 	margin-bottom: 10px;
 }
-
-
-
-.cat {
-	width: 3%;
-	font-size: 1.5em;
-}
-
-.big {
-    overflow: hidden !important;
-    white-space:nowrap !important;
-    text-overflow:ellipsis !important;
-	width: 65%;
-	display:inline-block !important;
-	font-size: 14px !important;
-	margin-bottom: 1px;
-}
-
-.big:first-letter {
-	text-transform:uppercase;
-}
-.ava {
-	width: 15%;
-    overflow: hidden !important;
-    white-space:nowrap !important;
-    text-overflow:ellipsis !important;
-	display:inline-block !important;
-}
-.user-ava{
-	height: 20px;
-	width: 20px;
-	border-radius: 100%;
-	margin-bottom: 2px;
-	/*margin: 8px 12px 5px 0;
-	float: left;
-	*/
-}
-
-.time {
-	color: #2e3539;
-	font-size: 12px;
-	/* margin-top: 4px;*/ 
-	width: 10%;
-}
-
-.stats {
-	width: 2%;
-}
-
-.barra {
-	margin-top:3px !important; 
-	margin-bottom:4px !important;
-}
-
-
-
 
 
 
