--- a/public/css/widget.css
+++ b/public/css/widget.css
@@ -46,8 +46,10 @@
 	white-space: normal !important;
 }
 .subspan {
-	position: absolute;
+	/*position: absolute;
 	right: 5px;
+	*/
+	float: right;
 }
 
 /*
